[gd_scene load_steps=7 format=2]

[ext_resource path="res://UIMain/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/font_header.tres" type="FontFile" id=2]
[ext_resource path="res://UIMain/CreateTroop/CreateTroop.gd" type="Script" id=3]
[ext_resource path="res://UIMain/Sounds/Close.wav" type="AudioStream" id=4]
[ext_resource path="res://UIMain/Sounds/Click.wav" type="AudioStream" id=5]
[ext_resource path="res://UIMain/Sounds/Select.wav" type="AudioStream" id=6]

[node name="CreateTroop" type="Panel"]
offset_left = -1.0
offset_right = 780.0
offset_bottom = 480.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="All" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TroopName" type="Label" parent="All"]
offset_right = 787.0
offset_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "CREATE_TROOP"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="All"]
offset_top = 52.0
offset_right = 787.0
offset_bottom = 88.0
minimum_size = Vector2( 0, 36 )
size_flags_horizontal = 3
custom_constants/separation = 8
alignment = 1

[node name="SelectPersons" type="Button" parent="All/Buttons"]
offset_right = 130.0
offset_bottom = 36.0
size_flags_horizontal = 3
text = "PERSONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectLeader" type="Button" parent="All/Buttons"]
offset_left = 138.0
offset_right = 263.0
offset_bottom = 36.0
size_flags_horizontal = 3
disabled = true
text = "LEADER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectMilitaryKind" type="Button" parent="All/Buttons"]
offset_left = 271.0
offset_right = 439.0
offset_bottom = 36.0
size_flags_horizontal = 3
text = "MILITARY_KIND"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectNavalKind" type="Button" parent="All/Buttons"]
offset_left = 447.0
offset_right = 597.0
offset_bottom = 36.0
size_flags_horizontal = 3
text = "NAVAL_KIND"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create" type="Button" parent="All/Buttons"]
offset_left = 605.0
offset_right = 787.0
offset_bottom = 36.0
size_flags_horizontal = 3
disabled = true
text = "CREATE_TROOP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H1" type="HBoxContainer" parent="All"]
offset_top = 104.0
offset_right = 787.0
offset_bottom = 246.0
custom_constants/separation = 8

[node name="V1" type="VBoxContainer" parent="All/H1"]
offset_right = 103.0
offset_bottom = 142.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="All/H1/V1"]
offset_right = 103.0
offset_bottom = 18.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "PERSON_LIST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PersonList" type="VBoxContainer" parent="All/H1/V1"]
offset_top = 26.0
offset_right = 103.0
offset_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V2" type="VBoxContainer" parent="All/H1"]
offset_left = 111.0
offset_right = 787.0
offset_bottom = 142.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="H2" type="VBoxContainer" parent="All/H1/V2"]
offset_right = 676.0
offset_bottom = 38.0
minimum_size = Vector2( 0, 36 )

[node name="H3" type="HBoxContainer" parent="All/H1/V2/H2"]
offset_right = 676.0
offset_bottom = 18.0

[node name="Label4" type="Label" parent="All/H1/V2/H2/H3"]
offset_right = 648.0
offset_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "QUANTITY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quantity" type="Label" parent="All/H1/V2/H2/H3"]
offset_left = 652.0
offset_right = 676.0
offset_bottom = 18.0
grow_horizontal = 0
text = "0/0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuantitySlider" type="HSlider" parent="All/H1/V2/H2"]
offset_top = 22.0
offset_right = 676.0
offset_bottom = 38.0
grow_vertical = 0
max_value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="GridContainer" parent="All/H1/V2"]
offset_top = 46.0
offset_right = 676.0
offset_bottom = 142.0
size_flags_horizontal = 3
custom_constants/v_separation = 8
custom_constants/h_separation = 8
columns = 6

[node name="Label9" type="Label" parent="All/H1/V2/C"]
offset_right = 112.0
offset_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "MILITARY_KIND"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label13" type="Label" parent="All/H1/V2/C"]
offset_left = 120.0
offset_right = 214.0
offset_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "NAVAL_KIND"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="All/H1/V2/C"]
offset_left = 222.0
offset_right = 312.0
offset_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "OFFENCE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="All/H1/V2/C"]
offset_left = 320.0
offset_right = 431.0
offset_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "DEFENCE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="All/H1/V2/C"]
offset_left = 439.0
offset_right = 565.0
offset_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "TROOP_MORALE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="All/H1/V2/C"]
offset_left = 573.0
offset_right = 676.0
offset_bottom = 18.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "COMBATIVITY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MilitaryKind" type="Label" parent="All/H1/V2/C"]
offset_top = 26.0
offset_right = 112.0
offset_bottom = 44.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "----"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavalKind" type="Label" parent="All/H1/V2/C"]
offset_left = 120.0
offset_top = 26.0
offset_right = 214.0
offset_bottom = 44.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "----"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Offence" type="Label" parent="All/H1/V2/C"]
offset_left = 222.0
offset_top = 26.0
offset_right = 312.0
offset_bottom = 44.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Defence" type="Label" parent="All/H1/V2/C"]
offset_left = 320.0
offset_top = 26.0
offset_right = 431.0
offset_bottom = 44.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Morale" type="Label" parent="All/H1/V2/C"]
offset_left = 439.0
offset_top = 26.0
offset_right = 565.0
offset_bottom = 44.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Combativity" type="Label" parent="All/H1/V2/C"]
offset_left = 573.0
offset_top = 26.0
offset_right = 676.0
offset_bottom = 44.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="All/H1/V2/C"]
offset_top = 52.0
offset_right = 112.0
offset_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "SPEED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="All/H1/V2/C"]
offset_left = 120.0
offset_top = 52.0
offset_right = 214.0
offset_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "INITIATIVE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label10" type="Label" parent="All/H1/V2/C"]
offset_left = 222.0
offset_top = 52.0
offset_right = 312.0
offset_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "CRITICAL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label11" type="Label" parent="All/H1/V2/C"]
offset_left = 320.0
offset_top = 52.0
offset_right = 431.0
offset_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "ANTI_CRITICAL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label12" type="Label" parent="All/H1/V2/C"]
offset_left = 439.0
offset_top = 52.0
offset_right = 565.0
offset_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "CRITICAL_RATE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label14" type="Label" parent="All/H1/V2/C"]
offset_left = 573.0
offset_top = 52.0
offset_right = 676.0
offset_bottom = 70.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 1, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="Label" parent="All/H1/V2/C"]
offset_top = 78.0
offset_right = 112.0
offset_bottom = 96.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Initiative" type="Label" parent="All/H1/V2/C"]
offset_left = 120.0
offset_top = 78.0
offset_right = 214.0
offset_bottom = 96.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Critical" type="Label" parent="All/H1/V2/C"]
offset_left = 222.0
offset_top = 78.0
offset_right = 312.0
offset_bottom = 96.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AntiCritical" type="Label" parent="All/H1/V2/C"]
offset_left = 320.0
offset_top = 78.0
offset_right = 431.0
offset_bottom = 96.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CriticalRate" type="Label" parent="All/H1/V2/C"]
offset_left = 439.0
offset_top = 78.0
offset_right = 565.0
offset_bottom = 96.0
size_flags_horizontal = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Confirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="hide" from="." to="." method="_on_CreateTroop_hide"]
[connection signal="pressed" from="All/Buttons/SelectPersons" to="." method="_on_SelectPersons_pressed"]
[connection signal="pressed" from="All/Buttons/SelectLeader" to="." method="_on_SelectLeader_pressed"]
[connection signal="pressed" from="All/Buttons/SelectMilitaryKind" to="." method="_on_SelectMilitaryKind_pressed"]
[connection signal="pressed" from="All/Buttons/SelectNavalKind" to="." method="_on_SelectNavalKind_pressed"]
[connection signal="pressed" from="All/Buttons/Create" to="." method="_on_Create_pressed"]
[connection signal="value_changed" from="All/H1/V2/H2/QuantitySlider" to="." method="_on_QuantitySlider_value_changed"]
